# ChangeLog for net-im/pidgin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/pidgin/ChangeLog,v 1.80 2009/01/20 01:26:32 tester Exp $

*pidgin-2.5.4 (20 Jan 2009)

  20 Jan 2009; Olivier Crête <tester@gentoo.org> +pidgin-2.5.4.ebuild:
  Version bump using eapi 2

  04 Jan 2009; Jeroen Roovers <jer@gentoo.org> pidgin-2.5.2.ebuild:
  Stable for HPPA (bug #248137).

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> pidgin-2.5.2.ebuild:
  ppc stable, bug #248137

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> pidgin-2.5.2.ebuild:
  ia64 stable wrt #248137

*pidgin-2.5.3 (26 Dec 2008)

  26 Dec 2008; Olivier Crête <tester@gentoo.org> +pidgin-2.5.3.ebuild:
  Version bump

  25 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> pidgin-2.5.2.ebuild:
  Stable on sparc, bug #248137

  25 Dec 2008; Tobias Klausmann <klausman@gentoo.org> pidgin-2.5.2.ebuild:
  Stable on alpha, bug #248137

  25 Dec 2008; Markus Meier <maekke@gentoo.org> pidgin-2.5.2.ebuild:
  amd64/x86 stable, bug #248137

  28 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/pidgin-2.5.2-asneeded.patch, pidgin-2.5.2.ebuild:
  Add patch for building with --as-needed (upstream bug #7391).

*pidgin-2.5.2 (24 Oct 2008)

  24 Oct 2008; Olivier Crête <tester@gentoo.org> -pidgin-2.4.3.ebuild,
  -pidgin-2.5.0.ebuild, +pidgin-2.5.2.ebuild:
  Version bump, bug #243264

  08 Sep 2008; Jeroen Roovers <jer@gentoo.org> pidgin-2.5.1.ebuild:
  Stable for HPPA (bug #234135).

  06 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org> pidgin-2.5.1.ebuild:
  ppc stable, bug #234135

  06 Sep 2008; Raúl Porcel <armin76@gentoo.org> pidgin-2.5.1.ebuild:
  alpha/ia64 stable wrt #234135

  06 Sep 2008; Markus Meier <maekke@gentoo.org> pidgin-2.5.1.ebuild:
  amd64/x86 stable, bug #234135

  05 Sep 2008; Ferris McCormick <fmccor@gentoo.org> pidgin-2.5.1.ebuild:
  Sparc stable, Security Bug #234135.

*pidgin-2.5.1 (04 Sep 2008)