@@ -9,13 +9,13 @@ DIST pidgin-2.5.4.tar.bz2 8398610 RMD160 13f9e27e00e73a02b18f967fcf722a0c511569e
 EBUILD pidgin-2.5.1.ebuild 5257 RMD160 191422a18058b1b2f946f2e7cfc50f94c8d13444 SHA1 d815a51713a185e999ef9a8f9c72c3b6019532a3 SHA256 ed49ce3c83b90c2faae18ddafeb5f72777872dc6c815d019b9a13d3bac92d17d
 EBUILD pidgin-2.5.2.ebuild 5384 RMD160 a8921cf29b4756294748577561c0afd8a89ee65d SHA1 6dc295f3313107a1e1018eb49ee3d684fe23ae1d SHA256 62b847ce460b8c0f14e232b64fde73ac99e1d30512e7d4b396fab6710d885acf
 EBUILD pidgin-2.5.3.ebuild 5298 RMD160 2d150a98536012118834f60eed3fd189be341886 SHA1 7ce7cd9c1e6eef07692827d5b4185d6568410733 SHA256 f9036f9177f7d2bd16e2153a92fc6861a5a023e286f46ca5eb37f7550c21113d
-EBUILD pidgin-2.5.4.ebuild 4640 RMD160 0376adbbc5b0869018781c16e845d8d568de24c0 SHA1 d4b4aff147086bb77af595eecba49c3f95b82cb2 SHA256 4c382091e8c9ac2d7e3d2b50e30d73aa113690438dbc6c04a993911190bec1a3
-MISC ChangeLog 10936 RMD160 541673ebf146e5d5ff3859fad5eedc6194a6e500 SHA1 8475407b4930034021c512da90b95f3dd50755da SHA256 3fbda1b2af6393d7c76ae3e04e261b1fdfa7f8b5867bd61ff35eda258c261e9c
+EBUILD pidgin-2.5.4.ebuild 4572 RMD160 47bb4c2df3eaf4dd49b8de571e1072ac989519b2 SHA1 ff3f8fa17069209e428bb1ebf8417aabe7536418 SHA256 1562c15e123babe60a1b43d242bd492dffc448c6d356337355122f177c21c168
+MISC ChangeLog 11029 RMD160 559f3fab09d9b5933c58472c4fa08b621b02ee24 SHA1 fbcdee2448e56198488c2d050e7d915c236dc069 SHA256 d017a779bd25fbc5af53455e242c8b479f052a5ffbaa1b39db66c2face468bb6
 MISC metadata.xml 989 RMD160 7d97c83fcb6e8189dabc908c7c4b12ebf16b7ccc SHA1 a0faafa7c0d1c8835141709e61c6205c503481bb SHA256 4f5d2e541300302662d3fcec49b74723ff00c4803cf88e522545dc9f3e0cad0f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkl1KFIACgkQmOfEJZHYOKfyvwCgtEGywsMkoQoW8g2BWUV9/YIG
-b9oAoN8zooAGWd7iHGF2cynnw1mWYm4X
-=SIW4
+iEYEARECAAYFAkl1b6MACgkQmOfEJZHYOKe7mACeMYC5cgK6apXVDWaezU/WvXwX
+BwUAn38g5gr9LmnaqrDhu3B80TEO5fYf
+=rgYo
 -----END PGP SIGNATURE-----
