@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/pidgin/Attic/pidgin-2.5.4.ebuild,v 1.1 2009/01/20 01:26:32 tester Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/pidgin/Attic/pidgin-2.5.4.ebuild,v 1.2 2009/01/20 06:30:47 tester Exp $
 
 EAPI=2
 
@@ -15,8 +15,9 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~x86 ~x86-fbsd"
-IUSE="bonjour dbus debug doc eds gadu gnutls gstreamer meanwhile networkmanager nls perl silc tcl tk spell qq gadu"
-IUSE="${IUSE} gtk sasl ncurses groupwise prediction zephyr" # mono"
+IUSE="bonjour dbus debug doc eds gadu gnutls +gstreamer meanwhile"
+IUSE="${IUSE} networkmanager nls perl silc tcl tk spell qq gadu"
+IUSE="${IUSE} +gtk sasl ncurses groupwise prediction zephyr" # mono"
 
 RDEPEND="
 	bonjour? ( net-dns/avahi )
@@ -171,7 +172,4 @@ src_install() {
 	gnome2_src_install
 	use perl && fixlocalpod
 	dodoc AUTHORS HACKING INSTALL NEWS README ChangeLog
-
-	# Remove superfluous desktop file
-	use gtk || rm -rf "${D}/usr/share/applications"
 }
