@@ -1,6 +1,9 @@
 # ChangeLog for net-im/pidgin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/pidgin/ChangeLog,v 1.80 2009/01/20 01:26:32 tester Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/pidgin/ChangeLog,v 1.81 2009/01/20 06:30:47 tester Exp $
+
+  20 Jan 2009; Olivier Crête <tester@gentoo.org> pidgin-2.5.4.ebuild:
+  Use gtk by default
 
 *pidgin-2.5.4 (20 Jan 2009)
 
